--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,4 +16,10 @@
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:id="@+id/animateProgressLL"
+        android:background="@color/colorAccent"
+        android:layout_width="wrap_content"
+        android:layout_height="3dp"
+        android:orientation="vertical"/>
 </LinearLayout>
